# memoryOS

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
LLMClient/: __init__.py  client.py  config.py  contracts.py  embedding.py  factory.py  json_parser.py  rerank.py  retry.py  schema_validation.py  structured.py
LLMClient/providers/: __init__.py  common.py  litellm.py  openai_compatible.py
agent_hook/: __init__.py  base.py  claude_code.py  codex.py  composition.py  config.py  contracts.py  cursor.py  events.py  injection.py  queue.py  session_service.py  transcript.py
architecture/: 004-operation-plane.md  006-storage-transaction.md  007-safety-policy.md
audit/: agent-integration-source-baseline.txt  unified_context_modified_files.md  unified_context_requirement_traceability.md  unified_context_self_checks.md  unified_context_source_call_graph.md
behavior/: __init__.py
behavior/core/: __init__.py
behavior/execute/: __init__.py  cooling_worker.py  session_commit_planner.py
behavior/projection/: __init__.py  behavior_case.py  behavior_cluster.py  behavior_pattern.py  behavior_support.py
behavior/retrieval/: __init__.py  similar_behavior_retriever.py
benchmark/: README.md  unified_context_100k.py
benchmark/smoke/: context_assembly_smoke.py
docs/: README.md  memory-architecture.md  storage-model.md
docs/architecture/: 001-product-positioning.md  002-contextdb.md  003-memory-behavior-action-policy.md  005-prediction-pipeline.md  008-production-closure.md  MemoryOS第一主链-记忆形成与更新设计.md  canonical-memory-change-checklist.md  canonical-memory-pipeline.md  unified-context-storage-retrieval.md
examples/: main.py
foundation/: __init__.py  clock.py  ids.py  readiness.py  scope.py
foundation/identity/: __init__.py  job_namespace.py  local.py  workspace.py
foundation/integrity/: __init__.py  canonical_json.py  digest.py
infrastructure/: __init__.py
infrastructure/context/: __init__.py  commit_protocol.py  contracts.py  exact_reader.py  facade.py  hydration.py  operation_commit.py  operation_effects.py  operation_target.py  orchestrator.py  projection_journal.py  query_planner.py  query_service.py  query_support.py  reranking.py  selection.py  session_commit_planner.py  session_projector.py
infrastructure/editor/: __init__.py
infrastructure/model/: __init__.py  client.py  config.py  contracts.py  factory.py
infrastructure/store/: __init__.py  query.py  runtime_layout.py
integrations/claude-code/: doctor.sh  install.py  settings.template.json
integrations/codex/: doctor.sh  hooks.json  install.py  install.sh  mcp.toml  uninstall.sh
integrations/openclaw/: openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
integrations/opencode/: package-lock.json  package.json  tsconfig.json
memory/: __init__.py  model.py  uri.py
memory/commit/: __init__.py  consolidation.py  consolidation_service.py  document_commit.py  document_commit_types.py  document_prepare.py  document_publication.py  document_recovery.py  entry.py  erase.py  erase_service.py  errors.py  planner.py  remember_plan.py  session_commit.py  session_commit_types.py  session_consumers.py  session_recovery.py  session_support.py
memory/conversation/: __init__.py  layout.py  messages.py
memory/core/: __init__.py
memory/document/: __init__.py  codec.py  config.py  model.py
memory/editor/: __init__.py  model.py  reader.py
memory/execute/: __init__.py  base.py  command_service.py  consolidate.py  contracts.py  edit.py  external_change.py  forget.py  history.py  pending_review_service.py  remember.py  write_planner.py
memory/formation/: __init__.py  (+2 more)
memoryos/: __init__.py
openApi/: __init__.py  ingress.py  memory_contract.py  retrieval_contract.py  session_service.py  version.py
policy/: __init__.py
pre/: __init__.py
runtime/: __init__.py  __main__.py  builder.py  config.py  container.py  dependencies.py  entry.py  lifecycle.py
sanitization/: __init__.py  context_projection.py  text.py
tests/: conftest.py  test_api_providers.py  test_memory_store.py
transaction/: __init__.py
(+1424 files in other folders)
