[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "memoryos"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0.2,<7"]

[project.optional-dependencies]
llm = [
    "json-repair>=0.25.0,<1",
    "jsonschema>=4,<5",
    "litellm>=1.83.7,<1.91.2",
]
mcp = ["mcp>=1.0,<2"]
server = ["uvicorn>=0.30,<1"]

[project.scripts]
memoryos = "runtime.entry:run"
memoryos-mcp-server = "openApi.mcp.stdio:run"
memoryos-agent-hook = "openApi.cli.agent_hooks:run"
memoryos-http-server = "openApi.http.app:run"

[tool.setuptools]
py-modules = ["config"]

[tool.setuptools.dynamic]
version = {attr = "openApi.version.__version__"}

[tool.setuptools.packages.find]
include = ["LLMClient*", "pre*", "memory*", "behavior*", "openApi*", "policy*", "agent_hook*", "infrastructure*", "foundation*", "runtime*", "sanitization*", "transaction*"]

[tool.setuptools.package-data]
"memory.schema.definitions" = ["*.yaml"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = ["config.py", "LLMClient", "pre", "memory", "behavior", "openApi", "policy", "agent_hook", "infrastructure", "foundation", "runtime", "sanitization", "transaction"]
reportUnsupportedDunderAll = false
