[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "memoryos"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0.2,<7"]

[project.optional-dependencies]
llm = [
    "json-repair>=0.25.0,<1",
    "jsonschema>=4,<5",
    "litellm>=1.83.7,<1.91.2",
]

[tool.setuptools.packages.find]
include = ["LLMClient*", "pre*", "memory*", "infrastructure*", "foundation*"]

[tool.setuptools.package-data]
"memory.schema.definitions" = ["*.yaml"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = ["LLMClient", "pre", "memory", "infrastructure", "foundation"]
reportUnsupportedDunderAll = false
